--- a/chiquinha.html
+++ b/chiquinha.html
@@ -7,6 +7,10 @@
     </head>
     <body>
    <p class = "p1">|| - Turma Do Chaves - ||</p>
+       <a href="index.html">Inicio</a>
+       <a href="madruga.html">Seu Madruga</a>
+       <a href="chiquinha.html">Chiquinha</a>
+       <a href="quico.html">Quico</a>
        <h1>A chiquinha vai contar tudo pro meu papai .....</h1>
        <h2>Personagem</h2>
          <div>
