--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <p class="p2">|| - Turma do Chaves - ||</p>
+        <a href="index.html">Inicio</a>
+        <a href="madruga.html">Seu Madruga</a>
+       <a href="chiquinha.html">Chiquinha</a>
+       <a href="quico.html">Quico</a></h4>
         <h1>Lá vem o chaves, chaves, chaves ...</h1>
         <p>A série conta a história de um garoto órfão e muito humilde, que é conhecido simplesmente como "El Chavo del ocho". No Brasil é conhecido como "Chaves do Oito" ou simplesmente "Chaves". O garoto vive na periferia de uma grande cidade, e seu "esconderijo" é um barril localizado no pátio principal da vila de 
             classe média baixa onde passa todo o seu dia.
@@ -30,7 +34,7 @@
             <img src="elenco.jpg" id = "img"/><br/>
             Foto do elenco do chaves.
             </div>
-            <table>
+            <table border="2" width="60%">
                 <tr>
                     <td>Ator</td>
                     <td>Personagem (português e espanhol)</td>
@@ -44,7 +48,7 @@
                     <td><a href="quico.html">Quico / Quico</a></td>
                 </tr>
                 <tr>
-                    <span class="s2"><td>María Antonieta de las Nieves</span></td>
+                  <span class="s2"><td>María Antonieta de las Nieves</span></td>
                     <td><a href="chiquinha.html">Chiquinha / Chilindrina</a></td>
                 </tr>
                 <tr>
