--- a/madruga.html
+++ b/madruga.html
@@ -6,6 +6,10 @@
     </head>
     <body>
        <p class = "p1">|| - Turma Do Chaves - ||</p>
+       <a href="index.html">Inicio</a>
+       <a href="madruga.html">Seu Madruga</a>
+       <a href="chiquinha.html">Chiquinha</a>
+       <a href="quico.html">Quico</a>
        <h1>Seu Madruga, só não te dou outra .....</h1>
        <h2>Personagem</h2>
        <img src="Seu_Madruga.jpg" />
