--- a/quico.html
+++ b/quico.html
@@ -7,6 +7,10 @@
     </head>
     <body>
        <p class = "p1">|| - Turma do Chaves - ||</p>
+       <a href="index.html">Inicio</a>
+       <a href="madruga.html">Seu Madruga</a>
+       <a href="chiquinha.html">Chiquinha</a>
+       <a href="quico.html">Quico</a>
        <h1>QUIKO,CHENTALHA, GENTALAHA</h1>
        <h2>Personagem</h2>
        <img src="quico.jpg" />
